# ai-task-platform

./: .env.example  ARCHITECTURE.md  README.md  backend.yaml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-worker.yml
backend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/config/: db.js  redis.js
backend/src/controllers/: authController.js  taskController.js
backend/src/middleware/: authMiddleware.js  errorMiddleware.js  rateLimiter.js
backend/src/models/: Task.js  User.js
backend/src/queues/: taskQueue.js
backend/src/routes/: authRoutes.js  taskRoutes.js
backend/src/utils/: generateToken.js  logger.js
backend/tests/: auth.test.js  task.test.js
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: AuthHero.tsx  LoginForm.tsx  PasswordStrength.tsx  RegisterForm.tsx
frontend/src/components/layout/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  NewTaskPage.tsx  RegisterPage.tsx  TaskDetailPage.tsx
frontend/src/services/: api.ts  authService.ts  taskService.ts
worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
worker/src/: config.py  db.py  redis_client.py  task_processor.py  worker.py
worker/src/operations/: __init__.py  lowercase.py  reverse_string.py  uppercase.py  word_count.py
worker/tests/: test_operations.py
(+5 files in other folders)
