[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-task-worker"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "rq>=1.16",
    "redis>=5.0",
    "pymongo>=4.7",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
